# dad-jokes

./: .gitignore  Dockerfile  README.md  app.py  database.db  dependencies.py  jokes.db  models.py  pyproject.toml  schema.py  test_app.py
.aws/: task-definition.json
.github/workflows/: aws.yml  codeql.yml  pytest.yml  tests.yml
api/: jokes.py  users.py
database/: database.py
models/: index.py  jokes.py  users.py
schemas/: index.py  jokes.py  users.py
tests/: test_app.py
