[tool.poetry]
name = "dad-jokes"
version = "0.1.0"
description = "Simple API for Dad Jokes. This is purely a learning project."
authors = ["octavioflo <41705533+octavioflo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dad_jokes"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
